--- a/front-end/index.html
+++ b/front-end/index.html
@@ -16,14 +16,13 @@
     />
   </head>
   <body>
-    <div id="top-content">Halle Maps</div>
+    <div id="top-content"></div>
     <div id="main-container">
       <div id="map-container">
         <div id="map"></div>
         <div id="details-area"></div>
       </div>
     </div>
-    <div id="bottom-content">Bottom Content</div>
 
     <script src="map.js"></script>
   </body>
