--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,10 +6,14 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <link rel="stylesheet" href="styles.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
+
     <link
       href="https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
@@ -18,15 +22,15 @@
   <body>
     <div id="top-content"></div>
     <div id="main-container">
+      <h1>Halle Maps</h1>
       <div id="map-container">
         <div id="map"></div>
         <div id="details-area"></div>
       </div>
       <div id="map2-container">
         <div id="map2"></div>
+      </div>
     </div>
-    
-  </div>
 
     <script src="map.js"></script>
   </body>
